--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
@@ -13,5 +15,11 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-paginate": "^6.3.2"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^10.4.7",
+    "babel-jest": "^26.1.0",
+    "jest": "^26.1.0",
+    "react-test-renderer": "^16.13.1"
   }
 }
