--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-paginate": "^6.3.2"
+    "react-paginate": "^6.3.2",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@testing-library/react": "^10.4.7",
