--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-paginate": "^6.3.2",
-    "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "react-paginate": "^6.3.2"
   },
   "devDependencies": {
     "@testing-library/react": "^10.4.7",
     "babel-jest": "^26.1.0",
+    "eslint": "^7.5.0",
+    "eslint-plugin-react": "^7.20.5",
     "jest": "^26.1.0",
     "react-test-renderer": "^16.13.1"
   }
